[tool.poetry]
name = "tibetanbrownbear"
version = "0.1.0"
description = ""
authors = ["Thomas Chopitea <tomchop@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
python-arango = "*"
marshmallow = "<3"
flask = "*"
flask-classful = "*"
webargs = "*"
tldextract = "*"
pytz = "*"
python-dateutil = "*"
yara-python = "==3.8.1"
url-normalize = "*"
redis = "*"
rq = "*"
stix2 = "==1.3.1"
taxii2-client = "==0.5.0"
pyjwt = "*"
sigmatools = "*"
pyyaml = ">=4.2b1"
oauthlib = {extras = ["signedtoken"], version = "*"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pylint = "*"
codecov = "*"
sphinx = "==1.7.7"
sphinx-autobuild = "*"
sphinx-rtd-theme = "*"
recommonmark = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
yeticli = "cli/yeticli.py"
yetictl = "cli/yetictl.py"
